--- a/package.json
+++ b/package.json
@@ -1,73 +1,15 @@
 {
   "name": "whatsit-image-index",
   "version": "0.0.1",
-  "description": "Test case runner for whatsit.io",
+  "description": "projectId/connect API subscribe and bigquery -> whatsitDB pump",
   "main": "app.js",
   "scripts": {
-    "dev": "node ./bin/dev.js",
-    "pod": "node ./bin/pod.js",
-    "test": "mocha --opts ./mocha.opts test/*.spec.js"
+    "start": "node ./bin/app.js"
   },
-  "babel": {
-    "presets": [
-      "es2015"
-    ],
-    "plugins": [
-      [
-        "add-module-exports",
-        "transform-es2015-modules-umd"
-      ]
-    ],
-    "env": {
-      "development": {
-        "sourceMaps": "inline"
-      },
-      "test": {
-        "plugins": [
-          "istanbul"
-        ]
-      }
-    }
-  },
-  "dependencies": {
-    "ansi_up": "1.3.0",
-    "async": "2.3.0",
-    "aws-sdk": "^2.41.0",
-    "babel-core": "^6.7.7",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-istanbul": "3.0.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-register": "^6.7.2",
-    "body-parser": "~1.16.0",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.0",
-    "express": "~4.14.1",
-    "jade": "~1.11.0",
-    "jsonwebtoken": "^7.3.0",
-    "mocha": "^3.1.2",
-    "moment": "^2.18.1",
-    "mongoose": "^4.8.3",
-    "morgan": "~1.7.0",
-    "must": "^0.13.1",
-    "promise": "^7.1.1",
-    "s3": "^4.4.0",
-    "s3-object-streams": "^0.7.0",
-    "underscore": "^1.8.3"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/whats-it/whatsit-image-index.git"
-  },
-  "keywords": [
-    "mocha",
-    "mochajs",
-    "whatsit"
-  ],
-  "author": "bluehackmaster",
+  "author": "k@bluehack.net",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/whats-it/whatsit-image-index/issues"
-  },
-  "homepage": "https://github.com/whats-it/whatsit-image-index#readme"
+  "dependencies": {
+    "child-process-promise": "^2.2.1",
+    "node-redis-pubsub": "^1.0.3"
+  }
 }
